[gd_scene load_steps=2 format=3 uid="uid://bccxiw8p7tm67"]

[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1_1g0uo"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1g0uo")
metadata/_edit_lock_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -512.0
offset_top = -504.0
offset_right = -64.0
offset_bottom = -56.0
grow_horizontal = 0
grow_vertical = 0

[node name="StartGameButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Start Game"
metadata/_edit_lock_ = true

[node name="Options" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Options
"
metadata/_edit_lock_ = true

[node name="Credits" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Credits
"
metadata/_edit_lock_ = true

[node name="Spacer" type="Control" parent="VBoxContainer"]
layout_mode = 2

[node name="Spacer2" type="Control" parent="VBoxContainer"]
layout_mode = 2

[node name="Spacer3" type="Control" parent="VBoxContainer"]
layout_mode = 2

[node name="Spacer4" type="Control" parent="VBoxContainer"]
layout_mode = 2

[node name="Spacer5" type="Control" parent="VBoxContainer"]
layout_mode = 2

[node name="Spacer6" type="Control" parent="VBoxContainer"]
layout_mode = 2

[node name="Spacer7" type="Control" parent="VBoxContainer"]
layout_mode = 2

[node name="Spacer8" type="Control" parent="VBoxContainer"]
layout_mode = 2

[node name="Spacer9" type="Control" parent="VBoxContainer"]
layout_mode = 2

[node name="Spacer10" type="Control" parent="VBoxContainer"]
layout_mode = 2

[node name="Spacer11" type="Control" parent="VBoxContainer"]
layout_mode = 2

[node name="Spacer12" type="Control" parent="VBoxContainer"]
layout_mode = 2

[node name="Spacer13" type="Control" parent="VBoxContainer"]
layout_mode = 2

[node name="Spacer14" type="Control" parent="VBoxContainer"]
layout_mode = 2

[node name="Spacer15" type="Control" parent="VBoxContainer"]
layout_mode = 2

[node name="Spacer16" type="Control" parent="VBoxContainer"]
layout_mode = 2

[node name="Spacer17" type="Control" parent="VBoxContainer"]
layout_mode = 2

[node name="Spacer18" type="Control" parent="VBoxContainer"]
layout_mode = 2

[node name="QuitGameButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Quit Game"

[connection signal="pressed" from="VBoxContainer/StartGameButton" to="." method="_on_start_game_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="VBoxContainer/Credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitGameButton" to="." method="_on_quit_game_button_pressed"]
